--- a/Breizh360.Gateway/appsettings.json
+++ b/Breizh360.Gateway/appsettings.json
@@ -17,7 +17,8 @@
       "AnonymousPathPrefixes": [
         "/api/auth",
         "/health"
-      ]
+      ],
+      "AllowAccessTokenQueryForHubs": true
     },
     "RateLimiting": {
       "PermitLimit": 200,
