--- a/Breizh360.Api/appsettings.Development.json
+++ b/Breizh360.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Postgres": "Host=localhost;Port=5432;Database=breizh360;Username=postgres;Password=postgres"
+    "Postgres": "Host=localhost;Port=5432;Database=breizh360;Username=postgres;Password=GuillK@uf24"
   },
   "Jwt": {
     "SigningKey": "DEV_SIGNING_KEY_CHANGE_ME_32_CHARS_MINIMUM",
